syntax = "proto3";
import "google/protobuf/descriptor.proto";
package PBCExt;

extend google.protobuf.OneofOptions {
    string select = 1001;        //  union select
}

extend google.protobuf.FieldOptions {
    string max_len_1 = 1001;         //最大长度
    string max_len_2 = 1002;         //最大长度
    int32 max_len_3 = 1003;         //最大长度
    string refer = 1004;        // 数组长度
    string oneof_id = 1005;// union field value
    string c_type = 1006;          // C结构类型
    string tdr_default_value = 1007; //tdr默认值
    string tdr_type = 1008;         //tdr类型
    bool fill_full = 1009;        // 是否会自动生成refer字段
}

extend google.protobuf.EnumValueOptions {
    string cname = 1001;         // cname
}

extend google.protobuf.MessageOptions {
    bool print_tlog_string = 1001;         //是否会生成c结构体转tlog格式字符串的接口
    bool print_oneof_field_name = 1002;     //是否会生成从cmd获得oneof field name的接口
}
